--- a/site_photo/templates/site_photo/biographie.html
+++ b/site_photo/templates/site_photo/biographie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Ma biogrsphie</title>
 </head>    
-<body>
+<body class= "blog">
     <h3>1.Presentation et Parcours </h3>
     <p> 
         Ma première caméra m’a été offerte par mon grand-père quand j’avais quinze ans. 
