--- a/site_photo/templates/site_photo/biographie.html
+++ b/site_photo/templates/site_photo/biographie.html
@@ -5,7 +5,9 @@
     <title>Ma biogrsphie</title>
 </head>    
 <body class= "blog">
-    <h3>1.Presentation et Parcours </h3>
+    <title>
+        <h3>1.Presentation et Parcours </h3>
+   </title>     
     <p> 
         Ma première caméra m’a été offerte par mon grand-père quand j’avais quinze ans. 
         Rapidement, j’ai troqué les photos de vacances contre des projets plus personnels : 
@@ -17,7 +19,9 @@
         et d’explorer différents univers visuels
     </p>
     
-    <h3>2.Mon style photographique<h3>
+    <title>
+        <h3>2.Mon style photographique<h3>
+    </title>        
     <p>
         Je travaille essentiellement en lumière naturelle, 
         cherchant à capturer l’authenticité et la simplicité. 
@@ -28,8 +32,10 @@
         je veux que chaque photo raconte une histoire 
         et suscite une émotion immédiate. Tokyo.
     </p>
-        
-    <h3>3. Projets Phare et Expositions</h3>
+     
+    <title>
+        <h3>3. Projets Phare et Expositions</h3>
+   </title>     
     <p>
         Au fil des années, j’ai participé à plusieurs expositions collectives au Japon et à l’étranger, 
         notamment à Kyoto Photo Fringe (2018) et à la galerie Lumière à Paris (2022). 
@@ -39,7 +45,9 @@
         réalisant des séries éditoriales qui mêlent reportage et atmosphère.
     </p>
     
-    <h3>4. Ma vision et mes prochains défis </h3>
+    <title>
+        <h3>4. Ma vision et mes prochains défis </h3>
+    </title>    
     <p>
         Aujourd’hui, je continue d’explorer de nouveaux terrains : 
         je m’intéresse à la photographie aérienne par drone pour embrasser des perspectives inédites, 
